2002-09-29  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Instead of forcing -fnative-struct into CFLAGS
	when using gcc for Win32, check for gcc version 3.x which uses
	-mms-bitfields instead. Also check if either of these switches is
	actually available at all, and warn if not. Thanks to Soren
	Andersen for the inspiration.

	* HACKING: Say we require autoconf 2.52 as that is what
	configure.in does.

2002-09-23  Arvind Samptur <arvind.samptur@wipro.com>
	* glib/gspawn.c (fork_exec_with_pipes) : when the child fails
	we need to reap it to avoid a zombie. This would
	happen in case of g_spawn_sync. Fixes #92658

2002-09-20  Matthias Clasen  <maclas@gmx.de>

	* glib/gscanner.c (g_scanner_msg_handler): Don't print
	scanner->input_name when it is NULL.  (#93752)

2002-09-06  Havoc Pennington  <hp@redhat.com>

	* autogen.sh: automake 1.4

2002-09-01  Soeren Sandmann  <sandmann@daimi.au.dk>

	* docs/reference/glib/tmpl/datalist.sgml, glib/gmain.c:

	Documentation fixes: (#75255, Martin Schulze; #76104, Daryll Strauss)

2002-08-26  Tor Lillqvist  <tml@iki.fi>

	* configure.in (G_LIBS_EXTRA): Don't link with -lwsock32 on
	Cygwin (#91696, Masahiro Sakai).

Tue Aug 20 16:01:03 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* glib/gconvert.c (strdup_len): validate 'len' argument properly
	for the case that input string is not null-terminated. (#91222)

2002-08-10  Gustavo Noronha Silva  <kov@debian.org>

	* configure.in: added pt_BR to ALL_LINGUAS

2002-08-07  Matthias Clasen  <maclas@gmx.de>

	* glib/gmarkup.c (g_markup_parse_context_get_element): 
	Use g_return_val_if_fail, no g_return_if_fail.

2002-08-06  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/gthread.c: Set the normal PID surrogate priority according
	to getpid() to avoid errors for niced processes. (#86116)

	* gthread/gthread-impl.c, gthread/gthread-posix.c,
	gthread/gthread-solaris.c: Do the same for the posix/dce
	implementation. Solaris still needs to set priority of the main